# mini_pupper_2_bsp

./: .gitignore  CONTRIBUTING.md  README.md  Servo_Test_20_11_2025.py  install.mp2.1535.sh  install.sh  prepare_dkms.sh  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
Display/: test.py
FuelGauge/: battery_monitor  battery_monitor.service  install.sh  play-low-power-sound.sh
IO_Configuration/: config.txt  install.sh
Python_Module/: AUTHORS  get-version.sh  requirements.txt  setup.cfg
Python_Module/MangDang/Adafruit_GPIO/: GPIO.py  SPI.py  __init__.py
Python_Module/MangDang/LCD/: ST7789.py
Python_Module/MangDang/mini_pupper/: Config.py  ESP32Interface.py  HardwareInterface.py  ServoCalibration.py  calibrate.py  display.py  shutdown.py
RPiCamera/: README.md  details_for_install_sh.md  install.sh
System/: check-reconfigure.sh  rc.local
demos/: README.md  audio_test.py  audio_test.sh  camera_ffplay_test.py  hapic-demo.py  (+13 more)
esp32/main/: CMakeLists.txt  Kconfig.projbuild  mini_pupper_app.cpp  mini_pupper_app.h  mini_pupper_cmd.cpp  mini_pupper_cmd.h  mini_pupper_host.cpp  mini_pupper_host.h  mini_pupper_host_base.h  mini_pupper_imu.cpp  mini_pupper_imu.h  mini_pupper_imu_cmd.cpp  mini_pupper_imu_cmd.h  mini_pupper_math.h  mini_pupper_ota.cpp  mini_pupper_ota.h  mini_pupper_power.cpp  mini_pupper_power.h  mini_pupper_protocol.h  mini_pupper_servos.cpp  mini_pupper_servos.h  mini_pupper_stats.h  mini_pupper_tasks.h  mini_pupper_types.h
mock_api/: AUTHORS  ChangeLog  requirements.txt  setup.cfg
mock_api/MangDang/mini_pupper/: Config.py  ESP32Interface.py  HardwareInterface.py  ServoCalibration.py  capabilities.p  capabilities.py  display.py  nvmem  nvram.py
mock_api/tests/: test_config.py  test_display.py  test_hardwareinterface.py  test_vmram.py
mock_api/tests/expected_results/: display_1  display_2  display_3  hardwareinterface_1
(+26 files in other folders)
