[metadata]
name             = MangDang
version          = 0.1.1
summary          = MangDang code for mini_pupper
description_file = README.rst
author           = MangDang
author_email     = fae@mangdang.net
home_page        = https://www.mangdang.net

[files]
packages         = MangDang

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
