idf_component_register(SRCS "mini_pupper_app.cpp"
                            "mini_pupper_power.cpp"
                            "mini_pupper_servos.cpp"
                            "mini_pupper_host.cpp"
                            "mini_pupper_ota.cpp"
			    "mini_pupper_imu.cpp"
			    "mini_pupper_cmd.cpp"
			    "mini_pupper_imu_cmd.cpp"
                    INCLUDE_DIRS "."
                    EMBED_TXTFILES ${project_dir}/server_certs/ca_cert.pem)
